# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
bags/rosbag2_2023_11_26-21_13_09/: metadata.yaml  rosbag2_2023_11_26-21_13_09_0.db3
frames/: frames_2023-11-26_20.46.47.gv
launch/: bag_recorder_launch.py
results/: changestring_results.txt  combined_yaml_results.txt  cppcheck.txt  cpplint.txt  results.txt  test_output.txt
src/: publisher.cpp  server_client.cpp  subscriber.cpp
test/: test.cpp
